feat: Update meta tags for SEO
Refine meta tags (description, og:title, og:description, twitter:title, twitter:description) to better reflect the application's purpose and value proposition. This change aims to improve search engine visibility and user engagement by providing more accurate and compelling information about Karjeras Kompass.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karjeras Kompass</title>
     
+    <meta name="description" content="Profesionāls DISC personības tests un AI karjeras mentors, kas palīdz atrast piemērotāko vidi un neizdegt darbā.">
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Karjeras Kalkulators - Atrodi savu īsto profesiju">
-    <meta property="og:description" content="Veic bezmaksas testu un uzzini, kura karjeras joma tev ir vispiemērotākā.">
+    <meta property="og:title" content="Karjeras Kompass - Atrodi savu vietu">
+    <meta property="og:description" content="Veic DISC testu, saņem AI mentora analīzi un atrodi darba vidi, kurā tu nevis izdegsi, bet uzplauksi.">
     <meta property="og:image" content="https://lh3.googleusercontent.com/d/1q1nuQ-TVUit07icJ2HjLX6uTloaj8xky">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Karjeras Kalkulators">
-    <meta name="twitter:description" content="Veic bezmaksas testu un uzzini, kura karjeras joma tev ir vispiemērotākā.">
+    <meta name="twitter:title" content="Karjeras Kompass">
+    <meta name="twitter:description" content="DISC tests ar AI mentoru, kas palīdz neizdegt un atrast tavu īsto karjeras ceļu.">
     <meta name="twitter:image" content="https://lh3.googleusercontent.com/d/1q1nuQ-TVUit07icJ2HjLX6uTloaj8xky">
 
     <script src="https://cdn.tailwindcss.com"></script>
